Layout issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,32 +1,32 @@
 /** global styles **/
 
 @font-face {
-	font-family: 'DINNextLTPro';
-	src: url('./font/DINNextLTPro-Regular.woff2') format('woff2'),
-		url('./font/DINNextLTPro-Regular.woff') format('woff');
-	font-weight: normal;
-	font-style: normal;
+  font-family: 'DINNextLTPro';
+  src: url('./font/DINNextLTPro-Regular.woff2') format('woff2'),
+    url('./font/DINNextLTPro-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
-	color: #2c3f4d !important;
+  color: #2c3f4d !important;
 }
 
 /** global styles **/
 * {
-	font-family: 'DINNextLTPro';
+  font-family: 'DINNextLTPro';
 }
 
 /** fix selects */
 .MuiPopover-root {
-	position: absolute !important;
+  position: absolute !important;
 
-	.MuiPopover-paper {
-		top: 0px !important;
-		left: 0px !important;
-		max-height: 20vh !important;
-		max-width: none !important;
-	}
+  .MuiPopover-paper {
+    top: 0px !important;
+    left: 0px !important;
+    max-height: 20vh !important;
+    max-width: none !important;
+  }
 }
 
 /* icons */
@@ -35,165 +35,162 @@ body {
 
 .MuiSelect-icon,
 .MuiAutocomplete-popupIndicator .MuiSvgIcon-root {
-	fill: transparent !important;
-	background: url(./images/expand-more-24-px.svg) no-repeat center center;
-	background-size: contain;
+  fill: transparent !important;
+  background: url(./images/expand-more-24-px.svg) no-repeat center center;
+  background-size: contain;
 }
 
 /** charts **/
 tspan {
-	user-select: none;
+  user-select: none;
 }
 
 // ScenarioGraph bars
 .bars {
-	display: flex;
-	height: 100px;
-	justify-content: space-around;
-	margin: 30px 20px 20px 55px;
-	&.setup {
-		margin-left: 0;
-		margin-top: 60px;
-		height: auto;
-		margin-bottom: 7px;
-		justify-content: flex-start;
-	}
-	.bar {
-		//background: #b09aff;
-		position: relative;
-		height: 100px;
-		min-width: 1px;
-		border: 1px solid white;
-		cursor: pointer;
-		background-image: linear-gradient(
-			to bottom,
-			rgba(0, 141, 201, 0.4) 1%,
-			transparent
-		);
-		&.history {
-			cursor: default;
-			background-image: linear-gradient(
-				to bottom,
-				rgba(0, 0, 0, 0.4) 1%,
-				transparent
-			);
-		}
-		&:before {
-			content: '';
-			display: block;
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			background: url(./images/mask.png) no-repeat 0px 0px;
-			background-repeat: no-repeat;
-		}
-		&.setup {
-			border: 1px solid #cce8f4;
-			cursor: auto;
-			margin-right: 15px;
-			background-image: linear-gradient(
-				to bottom,
-				rgba(146, 205, 230, 0.4) 1%,
-				#cce8f4
-			);
-		}
-		&.setup.c0 {
-			background-image: linear-gradient(to bottom, #ffffff, transparent);
-		}
-		&.setup:before {
-			background: url(./images/mask-blue.png) no-repeat 0px 0px;
-			background-repeat: no-repeat;
-		}
+  display: flex;
+  height: 100px;
+  justify-content: space-around;
+  // margin: 30px 20px 20px 55px;
+  margin: 30px 5% 20px 55px;
+  &.setup {
+    margin-left: 0;
+    margin-top: 60px;
+    height: auto;
+    margin-bottom: 7px;
+    justify-content: flex-start;
+  }
+  .bar {
+    //background: #b09aff;
+    position: relative;
+    height: 100px;
+    min-width: 1px;
+    border: 1px solid white;
+    cursor: pointer;
+    background-image: linear-gradient(
+      to bottom,
+      rgba(0, 141, 201, 0.4) 1%,
+      transparent
+    );
+    &.history {
+      cursor: default;
+      background-image: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.4) 1%,
+        transparent
+      );
+    }
+    &:before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url(./images/mask.png) no-repeat 0px 0px;
+      background-repeat: no-repeat;
+    }
+    &.setup {
+      border: 1px solid #cce8f4;
+      cursor: auto;
+      margin-right: 15px;
+      background-image: linear-gradient(
+        to bottom,
+        rgba(146, 205, 230, 0.4) 1%,
+        #cce8f4
+      );
+    }
+    &.setup.c0 {
+      background-image: linear-gradient(to bottom, #ffffff, transparent);
+    }
+    &.setup:before {
+      background: url(./images/mask-blue.png) no-repeat 0px 0px;
+      background-repeat: no-repeat;
+    }
 
-		&.removed {
-			> span {
-				opacity: 0.1;
-			}
-		}
+    &.removed {
+      > span {
+        opacity: 0.1;
+      }
+    }
 
-		> span {
-			display: block;
-			//background: #6236ff;
-			min-width: 10px;
-			opacity: 1;
-			//transition: opacity 0.2s ease-in;
+    > span {
+      display: block;
+      //background: #6236ff;
+      min-width: 10px;
+      opacity: 1;
+      //transition: opacity 0.2s ease-in;
 
-			background-image: linear-gradient(
-				to bottom,
-				rgba(0, 141, 201, 1) 1%,
-				transparent
-			);
+      background-image: linear-gradient(
+        to bottom,
+        rgba(0, 141, 201, 1) 1%,
+        transparent
+      );
 
-			&.current {
-				//background: #d01c8b;
+      &.current {
+        //background: #d01c8b;
 
-				background-image: linear-gradient(
-					to bottom,
-					#d01c8b 1%,
-					transparent
-				);
-			}
-		}
-	}
+        background-image: linear-gradient(to bottom, #d01c8b 1%, transparent);
+      }
+    }
+  }
 }
 
 .bar-tooltip {
-	position: absolute;
-	width: auto;
-	height: 40px;
-	bottom: 100%;
-	left: 50%;
-	transform: translate(-50%, 0%);
-	border-radius: 5px;
-	background: #008dc9;
-	color: #fff;
-	white-space: nowrap;
-	padding: 5px 10px;
+  position: absolute;
+  width: auto;
+  height: 40px;
+  bottom: 100%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  border-radius: 5px;
+  background: #008dc9;
+  color: #fff;
+  white-space: nowrap;
+  padding: 5px 10px;
 
-	&::after {
-		content: '';
-		display: block;
-		width: 0;
-		height: 0;
-		border-style: solid;
-		border-width: 14px 14px 0 14px;
-		border-color: #008dc9 transparent transparent transparent;
-		position: absolute;
-		bottom: -14px;
-		left: 50%;
-		margin-left: -14px;
-	}
+  &::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 14px 14px 0 14px;
+    border-color: #008dc9 transparent transparent transparent;
+    position: absolute;
+    bottom: -14px;
+    left: 50%;
+    margin-left: -14px;
+  }
 
-	.t {
-		display: inline-block;
-		vertical-align: top;
-		height: 30px;
-		line-height: 32px;
-		font-size: 16px;
-	}
+  .t {
+    display: inline-block;
+    vertical-align: top;
+    height: 30px;
+    line-height: 32px;
+    font-size: 16px;
+  }
 
-	.i {
-		display: inline-block;
-		vertical-align: top;
-		height: 30px;
-		width: 30px;
-		margin-left: 1px;
+  .i {
+    display: inline-block;
+    vertical-align: top;
+    height: 30px;
+    width: 30px;
+    margin-left: 1px;
 
-		&.plus {
-			background: url(./images/plus-icon.svg) no-repeat center center;
-			background-size: contain;
-		}
+    &.plus {
+      background: url(./images/plus-icon.svg) no-repeat center center;
+      background-size: contain;
+    }
 
-		&.edit {
-			background: url(./images/edit-icon.svg) no-repeat center center;
-			background-size: contain;
-		}
+    &.edit {
+      background: url(./images/edit-icon.svg) no-repeat center center;
+      background-size: contain;
+    }
 
-		&.remove {
-			background: url(./images/delete-icon.svg) no-repeat center center;
-			background-size: contain;
-		}
-	}
+    &.remove {
+      background: url(./images/delete-icon.svg) no-repeat center center;
+      background-size: contain;
+    }
+  }
 }
